parslers-benchmark/src/tests/invalid/semanticErr/variables/basicTypeErr11.wacc
# type mismatch: string <- bool

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  string s = true
end
